--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,5 +12,5 @@
 {{ end }}
 
 {{ define "footer" }}
-<footer>Sist oppdatert 29. desember 2019. Backend og UI laget i samarbeid med Stig Johan Berggren.</footer>
+<footer>Sist oppdatert 29. desember 2019. Backaend og UI laget i samarbeid med Stig Johan Berggren.</footer>
 {{ end }}
