--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,12 +1,14 @@
 {{ define "main" }}
-{{ partial "sidebar.html" .Site }}
-<main aria-role="main">
-  <header class="homepage-header">
+<header class="homepage-header">
     <h1>{{ .Title }}</h1>
     {{ with .Params.subtitle }}
     <span class="subtitle">{{.}}</span>
     {{ end }}
-  </header>
-  {{ .Content }}
-</main>
+</header>
+<div class="row flex-xl-nowrap">
+    {{ partial "sidebar.html" .Site }}
+    <main class="col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content" aria-role="main">
+        {{ .Content }}
+    </main>
+</div>
 {{ end }}
