--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,37 +1,10 @@
-
 <!-- sidebar start -->
-<aside>
-    <ul>
-        {{ $currentPage := . }}
-        {{ range .Site.Menus.main }}
-            {{ if .HasChildren }}
-                <li class="{{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }}">
-                    <a href="#">
-                        {{ .Pre }}
-                        <span>{{ .Name }}</span>
-                    </a>
-                </li>
-                <ul class="sub-menu">
-                    {{ range .Children }}
-                        <li class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }}">
-                            <a href="{{ .URL }}">{{ .Name }}</a>
-                        </li>
-                    {{ end }}
-                </ul>
-            {{ else }}
-                <li>
-                    <a href="{{ .URL }}">
-                        {{ .Pre }}
-                        <span>{{ .Name }}</span>
-                    </a>
-                </li>
-            {{ end }}
-        {{ end }}
-        <li>
-            <a href="#" target="_blank">Hardcoded Link 1</a>
-        </li>
-        <li>
-            <a href="#" target="_blank">Hardcoded Link 2</a>
-        </li>
-    </ul>
-</aside>
+<div class="list-group col-md-3 col-xl-2 bd-sidebar">
+    {{ $currentPage := . }}
+    {{ range .Site.Menus.main }}
+        <a class="list-group-item list-group-item-action" href="{{ .URL }}">
+            {{ .Pre }}
+            <span>{{ .Name }}</span>
+        </a>
+    {{ end }}
+</div>
