survey og wifi som markdown

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,7 +30,9 @@
 </head>
 
 <body id="petter-holstad">
-    {{ partial "nav.html" . .Site }}
+    <header>
+        {{ partial "nav.html" . .Site }}
+    </header>
     <div class="container-fluid">
         {{ block "main" . }}
         {{ end }}
