--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,13 +1,11 @@
 {{ define "main" }}
-<header class="homepage-header">
-    <h1>{{ .Title }}</h1>
-    {{ with .Params.subtitle }}
-    <span class="subtitle">{{.}}</span>
-    {{ end }}
-</header>
 <div class="row flex-xl-nowrap">
-    {{ partial "sidebar.html" .Site }}
+    <!-- {{ partial "sidebar.html" .Site }} -->
     <main class="col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content" aria-role="main">
+        <h1>{{ .Title }}</h1>
+        {{ with .Params.subtitle }}
+            <span class="subtitle">{{.}}</span>
+        {{ end }}
         {{ .Content }}
     </main>
 </div>
