--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
-<html lang="no">
+<html lang="nb">
 
 <head>
-    <meta charset="utf-8">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta content="width=device-width, shrink-to-fit=no, initial-scale=1" name="viewport">
-    <meta content="" name="description">
-    <meta content="Petter Holstad" name="author">
+  <meta charset="utf-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width, shrink-to-fit=no, initial-scale=1" name="viewport">
+  <meta content="" name="description">
+  <meta content="Petter Holstad" name="author">
 
-    <title>Petter Holstad</title>
+  <title>Petter Holstad</title>
 
-    <link rel="icon" href="/favicon.png">
-    <link href="/style copy.css" rel="stylesheet">
+  <link rel="icon" href="/favicon.png">
+  <link href="/style copy.css" rel="stylesheet">
 
-    <script src="https://kit.fontawesome.com/72ae453d62.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/72ae453d62.js" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"
-        defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"
-        defer></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"
-        defer></script>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"
+    defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"
+    defer></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"
+    defer></script>
 </head>
 
 <body id="petter-holstad">
-    <header>
-        {{ partial "nav.html" . .Site }}
-    </header>
-    <div class="container-fluid">
-        {{ block "main" . }}
-        {{ end }}
-        {{ block "footer" . }}
-        {{ end }}
-    </div>
+  <header>
+    {{ partial "nav.html" . .Site }}
+  </header>
+  <div class="container-fluid">
+    {{ block "main" . }}
+    {{ end }}
+  </div>
+  <footer class="text-muted small text-center p-3">
+    {{ block "footer" . }}
+    {{ end }}
+  </footer>
 </body>
 
 </html>
