--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,16 +1,17 @@
 {{ define "main" }}
 <main aria-role="main">
-  <header class="homepage-header">
-    <h1>{{.Title}}</h1>
-    {{ with .Params.subtitle }}
+  <h1>{{ .Title }}</h1>
+  {{ with .Params.subtitle }}
     <span class="subtitle">{{.}}</span>
-    {{ end }}
-  </header>
+  {{ end }}
   {{ .Content }}
-  <div class="list-group">{{ .TableOfContents }}</div>
 </main>
 {{ end }}
 
 {{ define "footer" }}
-<footer>Sist oppdatert 29. desember 2019. Backaend og UI laget i samarbeid med Stig Johan Berggren.</footer>
+<p>
+  Sist oppdatert {{ .Date }}. Alt innhold er © Petter Holstad. Nettsiden er
+  utviklet av Stig Johan Berggren.
+</p>
+</footer>
 {{ end }}
