--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,11 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <!-- {{ $currentPage := . }} -->
-    <a class="navbar-brand" href="/">P-Dog</a>
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <!-- {{ $currentPage := . }} -->
+  <a class="navbar-brand" href="/">P-Dog</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div id="navbar-nav" class="collapse navbar-collapse">
     <div class="navbar-nav">
-        {{ $currentPage := . }}
-        {{ range $.Site.Menus.main }}
+    {{ $currentPage := . }}
+      {{ range $.Site.Menus.main }}
         <a class="nav-item nav-link{{if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }} active{{end}}"
-            href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
-        {{ end }}
+          href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
+      {{ end }}
     </div>
+  </div>
 </nav>
