--- a/layouts/shortcodes/holdeplasser.html
+++ b/layouts/shortcodes/holdeplasser.html
@@ -1,52 +1,37 @@
 <table class="table table-sm" id="collapseHoldeplasser">
     <thead>
         <tr>
-            <td>Holdeplass</td>
-            <td>Rute</td>
+            <th>Holdeplass</th>
+            <th>Rute</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td>Arendalsgata - nærmeste bussholdeplass på Sagene-siden</td>
-            <td class="rute-wrapper">
-                <div class="bybuss rute"><i class="fas fa-bus"></i> 20</div>
-                <div class="bybuss rute"><i class="fas fa-bus"></i> 37</div>
-                <div class="bybuss rute"><i class="fas fa-bus"></i> 54</div>
-                <div class="nattbuss rute"><i class="fas fa-moon"></i> 20</div>
+            <td class="d-flex flex-wrap">
+		{{ $routes := dict "20" "bybuss" "37" "bybuss" "54" "bybuss" "20" "nattbuss" }}
+		{{ partial "rute.html" $routes }}
             </td>
         </tr>
         <tr>
             <td>Sandaker senter - nærmeste trikkeholdeplass på Torshov-siden</td>
-            <td class="rute-wrapper">
-                <div class="tram rute"><i class="fas fa-train"></i> 11</div>
-                <div class="nattbuss rute"><i class="fas fa-bus"></i> 11N</div>
-                <div class="tram rute"><i class="fas fa-train"></i> 12</div>
-                <div class="nattbuss rute"><i class="fas fa-bus"></i> 12N</div>
-                <div class="tram rute"><i class="fas fa-train"></i> 13</div>
+            <td class="d-flex flex-wrap">
+		{{ $routes := dict "11" "tram" "11N" "nattbuss" "12" "tram" "12N" "nattbuss" "13" "tram" }}
+		{{ partial "rute.html" $routes }}
             </td>
         </tr>
         <tr>
             <td>Torshovparken - i tilfelle du må ta 30-bussen er det gangavstand</td>
-            <td class="rute-wrapper">
-                <div class="bybuss rute"><i class="fas fa-bus"></i> 20</div>
-                <div class="bybuss rute"><i class="fas fa-bus"></i> 30</div>
+            <td class="d-flex flex-wrap">
+		{{ $routes := dict "20" "bybuss" "30" "bybuss" }}
+		{{ partial "rute.html" $routes }}
             </td>
         </tr>
         <tr>
             <td>Storo - nærmeste knutepunkt med t-bane</td>
-            <td class="rute-wrapper">
-                <div class="metro rute"><i class="fas fa-subway"></i> 5</div>
-                <div class="metro rute"><i class="fas fa-subway"></i> 6</div>
-                <div class="tram rute"><i class="fas fa-train"></i> 11</div>
-                <div class="nattbuss rute"><i class="fas fa-bus"></i> 11N</div>
-                <div class="tram rute"><i class="fas fa-train"></i> 12</div>
-                <div class="nattbuss rute"><i class="fas fa-bus"></i> 12N</div>
-                <div class="tram rute"><i class="fas fa-train"></i> 13</div>
-                <div class="bybuss rute"><i class="fas fa-bus"></i> 23</div>
-                <div class="bybuss rute"><i class="fas fa-bus"></i> 24</div>
-                <div class="bybuss rute"><i class="fas fa-bus"></i> 56</div>
-                <div class="bybuss rute"><i class="fas fa-bus"></i> 56B</div>
-                <div class="bybuss rute"><i class="fas fa-bus"></i> 91</div>
+            <td class="d-flex flex-wrap">
+		{{ $routes := dict "5" "metro" "6" "metro" "11" "tram" "11N" "nattbuss" "12" "tram" "12N" "nattbuss" "13" "tram" "23" "bybuss" "24" "bybuss" "56" "bybuss" "56B" "bybuss" "91" "bybuss" }}
+		{{ partial "rute.html" $routes }}
             </td>
         </tr>
     </tbody>
