--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,16 +1,28 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <!-- {{ $currentPage := . }} -->
-  <a class="navbar-brand" href="/">Petter Holstad</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav" aria-controls="navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div id="navbar-nav" class="collapse navbar-collapse">
-    <div class="navbar-nav">
-    {{ $currentPage := . }}
-      {{ range $.Site.Menus.main }}
-        <a class="nav-item nav-link{{if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }} active{{end}}"
-          href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
-      {{ end }}
-    </div>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="content/_index">Petter Holstad <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/test/enk">Helt og Holdent</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="visit">Besøk</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Tech
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="test/epost">Catch-all e-postadresser</a>
+          <a class="dropdown-item" href="backups">Sikkerhetskopier</a>
+        </div>
+      </li>
+    </ul>
   </div>
 </nav>
