Flyttet den lange listen av kontaktinformasjon til ny side, forsiden har nå mer generell informasjon og vesentlig kontaktinformasjon. Splittet personvern til en ny side fra utvikler. Lagt til lenke til utvikler og personvern i footer. La til en mal-side. Strukturering av tekst på catchall. Større strukturendring knytta til endelig lansering av navbar. Fjernet generell varsel om uferdig side, og la det til på alarmer. La til flere innholdssider.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,6 +9,6 @@
 {{ define "footer" }}
 <p>
   Sist oppdatert {{ .Date }}. Alt innhold er © Petter Holstad. Nettsiden er
-  utviklet av Stig Johan Berggren.
+  utviklet av Stig Johan Berggren. <br><a href="../utvikler" target_blank>Utvikler</a> • <a href="../personvern" target_blank>Personvern</a>
 </p>
 {{ end }}
