--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,26 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+ <a class="navbar-brand" href="..">    <img src="https://pdog.no/favicon.png" width="30" height="30" class="d-inline-block align-top" alt="">     							   &nbsp;&nbsp;<b>petterholstad.no • pdog.no</b></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="content/_index">Petter Holstad <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="../kontaktinfo">Kontaktinformasjon</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/test/enk">Helt og Holdent</a>
-      </li>
+        <a class="nav-link" href="../visitt">Ivan Bjørndals gate 6</a>
+      </li>      
       <li class="nav-item">
-        <a class="nav-link" href="visit">Besøk</a>
+        <a class="nav-link" href="../heltogholdent">Helt og Holdent</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Tech
+          Tek
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="test/epost">Catch-all e-postadresser</a>
-          <a class="dropdown-item" href="backups">Sikkerhetskopier</a>
+          <a class="dropdown-item" href="../catchall">E-post: Catch-all</a>
+          <a class="dropdown-item" href="../sikkerhetskopi">Sikkerhetskopiering</a>
+          
+                <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Diverse
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="../utvikler">Utvikler</a>
+          <a class="dropdown-item" href="../personvern">Personvern</a>
         </div>
       </li>
     </ul>
