--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,7 +8,7 @@
   <meta content="" name="description">
   <meta content="Petter Holstad" name="author">
 
-  <title>Petter Holstad</title>
+  <title>pdog.no</title>
 
   <link rel="icon" href="/favicon.png">
   <link href="/style.css" rel="stylesheet">
