Endret filstilen på bildet på 404-siden.

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,7 +2,7 @@
 {{ define "main"}}
     <main id="main">
       <div>      
-      <img src="404katt.jpeg" alt="Bildet viser en hund som står ved en kjøttpresse og kverner kjøtt. Hunden har et litt forskrekket ansiktsuttrykk. På bildet står følgende tekst (på dansk): Katten!!!!!! Nej den har jeg ikke set ???">
+      <img src="www/404katt.jpeg" alt="Bildet viser en hund som står ved en kjøttpresse og kverner kjøtt. Hunden har et litt forskrekket ansiktsuttrykk. På bildet står følgende tekst (på dansk): Katten!!!!!! Nej den har jeg ikke set ???">
       
        <h1 id="title"><a href="{{ "/" | relURL }}">Gå tilbake til hovedsiden.</a></h1>
       </div>
