formater kildefiler og fiks valideringsfeil

--- a/layouts/shortcodes/bildepetter.html
+++ b/layouts/shortcodes/bildepetter.html
@@ -1,1 +1,6 @@
-<img src="petter.jpg" align=right width=320px></a>
+<img
+  src="petter.jpg"
+  class="img-fluid float-right m-2"
+  width="320"
+  alt="Portrettfoto av Petter ved en blomsterkasse"
+>
