--- a/layouts/shortcodes/bildebeer.html
+++ b/layouts/shortcodes/bildebeer.html
@@ -1,1 +1,1 @@
-<a href="https://open.beerwithme.se/#addfriend?email=u2231084@beerwithme.se&name=Petterus" target_blank><img src="beerwithme.jpeg" width=100px></a>
+<a href="https://open.beerwithme.se/#addfriend?email=u2231084@beerwithme.se&name=Petterus" target_blank><img src="beerwithme.jpeg" width="100px"></a>
