--- a/layouts/shortcodes/knapp-kontaktinfo.html
+++ b/layouts/shortcodes/knapp-kontaktinfo.html
@@ -1,3 +1,3 @@
-<a href="../kontaktinfo"><button type="button" class="btn btn-primary btn-lg">Se fullstendig kontaktinfo</button></a>
+<a href="../kontaktinfo" class="btn btn-primary btn-lg">Se fullstendig kontaktinfo</a>
 
-<a href="../visitt"><button type="button" class="btn btn-primary btn-lg">Få veibeskrivelse</button></a>
+<a href="../visitt" class="btn btn-primary btn-lg">Få veibeskrivelse</a>
