fiks target="_blank" og tabell

--- a/layouts/shortcodes/bildewhatsapp.html
+++ b/layouts/shortcodes/bildewhatsapp.html
@@ -1,1 +1,1 @@
-<a href="https://wa.me/qr/6DGSHLESPCYCB1" target_blank><img src="whatsapp.jpeg" width=100px></a>
+<a href="https://wa.me/qr/6DGSHLESPCYCB1" target="_blank" rel="noreferrer noopener"><img src="whatsapp.jpeg" width=100px></a>
