--- a/layouts/shortcodes/kontaktinfo.html
+++ b/layouts/shortcodes/kontaktinfo.html
@@ -1,89 +1,87 @@
-
-<div class="table-responsive"><table class="table table-hover" id="collapseHoldeplasser">
+<div class="table-responsive">
+  <table class="table table-hover" id="collapseHoldeplasser">
     <thead>
-        <tr>
-            <th>Plattform</th>
-            <th>Adresse/brukernavn</th>
-        </tr>
+      <tr>
+        <th>Plattform</th>
+        <th>Adresse/brukernavn</th>
+      </tr>
     </thead>
     <tbody>
-    	<tr>
-    		<td>Airbnb</td>
-    		<td><a href="https://www.airbnb.no/users/show/4466713" target_blank>Petter</a></td>
-    	</td>
-          <tr>
-        	<td>Apple Music</td>
-        	<td><a href="https://music.apple.com/profile/petterholstad" target_blank>petterhol</a></td>
-        </tr>
+      <tr>
+        <td>Airbnb</td>
+        <td><a href="https://www.airbnb.no/users/show/4466713" target="_blank" rel="noreferrer noopener">Petter</a></td>
+      </tr>
+      <tr>
+        <td>Apple Music</td>
+        <td><a href="https://music.apple.com/profile/petterholstad" target="_blank" rel="noreferrer noopener">petterhol</a></td>
+      </tr>
 
       <tr>
-        	<td>Beer With Me</td>
-        	<td><a href="https://open.beerwithme.se/#addfriend?email=u2231084@beerwithme.se&name=Petterus" target_blank>petterhol</a></td>
-        </tr>
-        <tr>
-        	<td>Digipost</td>
-        	<td>petter.holstad#0D8M</td>
-        </tr>
-        <tr>
-            <td>E-post</td>
-            <td><a href="mailto:hei@pdog.no">hei@pdog.no</a></td>
-        </tr>
-        <tr>
-            <td>Finn.no</td>
-            <td><a href="https://www.finn.no/user/profile/profile.html?id-287595302">Petter Holstad</a></td>
-        </tr>        
-        <tr>
-        	<td>Facebook Messenger</td>
-        	<td>Petter Holstad</td>
-        </tr>
-        <tr>
-        	<td>Google Hangouts</td>
-        	<td>petterholstad@gmail.com</td>
-        </tr>
-        <tr>
-        	<td>iMessage</td>
-        	<td><a href="+4792696496">+47&nbsp;926&nbsp;96&nbsp;496</a></td>
-		</tr>
-        <tr>
-        	<td>Instagram</td>
-        	<td>petterhol</td>
-        </tr>
-        <tr>
-        	<td>Signal</td>
-        	<td>+47&nbsp;926&nbsp;96&nbsp;496</td>
-        </tr>
-        <tr>
-        	<td>Skatteetaten</td>
-        	<td><a href="https://catsnthing.com/PUVGEB">Gå til siste skattemelding</a></td>
-        </tr>
-        <tr>
-        	<td>Skype</td>
-        	<td>skype@pdog.no</td>
-        </tr>
-        <tr>
-        	<td>Telefonnummer</td>
-        	<td><a href="+4792696496">+47&nbsp;926&nbsp;96&nbsp;496</a></td>
-        </tr>
-        <tr>
-        	<td>Postadresse for fysiske brev</td>
-        	<td>Ivan Bjørndals gate 6<br>0472 Oslo</td>
-        </tr>
-        <tr>
-        	<td>Vipps</td>
-        	<td><a href="https://qr.vipps.no/28/2/01/031/4792696496?v=1">+47&nbsp;926&nbsp;96&nbsp;496</a></td>
-        </tr>
-        <tr>
-        	<td>WhatsApp</td>
-        	<td><a href="https://wa.me/qr/6DGSHLESPCYCB1">+47&nbsp;926&nbsp;96&nbsp;496</a></td>
-        </tr>
-        <tr>
-        	<td>Xbox Live</td>
-        	<td>petterhol3883</td>
-        </tr>
+        <td>Beer With Me</td>
+        <td><a href="https://open.beerwithme.se/#addfriend?email=u2231084@beerwithme.se&name=Petterus"
+            target="_blank" rel="noreferrer noopener">petterhol</a></td>
+      </tr>
+      <tr>
+        <td>Digipost</td>
+        <td>petter.holstad#0D8M</td>
+      </tr>
+      <tr>
+        <td>E-post</td>
+        <td><a href="mailto:hei@pdog.no">hei@pdog.no</a></td>
+      </tr>
+      <tr>
+        <td>Finn.no</td>
+        <td><a href="https://www.finn.no/user/profile/profile.html?id-287595302">Petter Holstad</a></td>
+      </tr>
+      <tr>
+        <td>Facebook Messenger</td>
+        <td>Petter Holstad</td>
+      </tr>
+      <tr>
+        <td>Google Hangouts</td>
+        <td>petterholstad@gmail.com</td>
+      </tr>
+      <tr>
+        <td>iMessage</td>
+        <td><a href="+4792696496">+47&nbsp;926&nbsp;96&nbsp;496</a></td>
+      </tr>
+      <tr>
+        <td>Instagram</td>
+        <td>petterhol</td>
+      </tr>
+      <tr>
+        <td>Signal</td>
+        <td>+47&nbsp;926&nbsp;96&nbsp;496</td>
+      </tr>
+      <tr>
+        <td>Skatteetaten</td>
+        <td><a href="https://catsnthing.com/PUVGEB">Gå til siste skattemelding</a></td>
+      </tr>
+      <tr>
+        <td>Skype</td>
+        <td>skype@pdog.no</td>
+      </tr>
+      <tr>
+        <td>Telefonnummer</td>
+        <td><a href="+4792696496">+47&nbsp;926&nbsp;96&nbsp;496</a></td>
+      </tr>
+      <tr>
+        <td>Postadresse for fysiske brev</td>
+        <td>Ivan Bjørndals gate 6<br>0472 Oslo</td>
+      </tr>
+      <tr>
+        <td>Vipps</td>
+        <td><a href="https://qr.vipps.no/28/2/01/031/4792696496?v=1">+47&nbsp;926&nbsp;96&nbsp;496</a></td>
+      </tr>
+      <tr>
+        <td>WhatsApp</td>
+        <td><a href="https://wa.me/qr/6DGSHLESPCYCB1">+47&nbsp;926&nbsp;96&nbsp;496</a></td>
+      </tr>
+      <tr>
+        <td>Xbox Live</td>
+        <td>petterhol3883</td>
+      </tr>
 
     </tbody>
-</table>
+  </table>
 </div>
-
-
-
