--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,14 +1,18 @@
 {{ define "main" }}
-<!-- {{ partial "sidebar.html" .Site }} -->
-{{ with .Params.subtitle }}
-  <span class="subtitle">{{.}}</span>
-{{ end }}
-{{ .Content }}
+  <!-- {{ partial "sidebar.html" .Site }} -->
+  {{ with .Params.subtitle }}
+    <span class="subtitle">{{.}}</span>
+  {{ end }}
+  {{ .Content }}
 {{ end }}
 
 {{ define "footer" }}
 <p>
   Sist oppdatert {{ .Date }}. Alt innhold er © Petter Holstad. Nettsiden er
-  utviklet av Stig Johan Berggren. <br><a href="../utvikler" target_blank>Utvikler</a> • <a href="../personvern" target_blank>Personvern</a>
+  utviklet av Stig Johan Berggren.<br>
+  <a href="/diverse/utvikler" target_blank>Utvikler</a>
+   • 
+   <a
+    href="/diverse/personvern" target_blank>Personvern</a>
 </p>
 {{ end }}
