Generer unike id-er

--- a/layouts/shortcodes/accordion.html
+++ b/layouts/shortcodes/accordion.html
@@ -1,3 +1,4 @@
-<div class="accordion">
+{{ $id := printf "accordion-%d" .Ordinal }}
+<div class="accordion" id="{{ $id }}">
   {{ .Inner }}
 </div>
