--- a/layouts/shortcodes/card.html
+++ b/layouts/shortcodes/card.html
@@ -1,13 +1,16 @@
-<div class="card" id="accordionExample">
-  {{ $id := .Ordinal }}
-  <div class="card-header" id="card-{{ $id }}">
+{{ $parentId := printf "accordion-%d" .Parent.Ordinal }}
+{{ $cardId := printf "card-%d-%d" .Parent.Ordinal .Ordinal }}
+{{ $headerId := printf "%s-header" $cardId }}
+{{ $collapseId := printf "%s-collapse" $cardId }}
+<div class="card" id="{{ $cardId }}">
+  <div class="card-header" id="{{ $headerId }}">
     <h2 class="mb-0">
-      <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapse-{{ $id }}" aria-expanded="true" aria-controls="collapse-{{ $id }}" >
+      <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#{{ $collapseId }}" aria-expanded="true" aria-controls="{{ $collapseId }}" >
         {{ .Get "header" }}
       </button>
     </h2>
   </div>
-  <div id="collapse-{{ $id }}" class="collapse" aria-labelledby="card-{{ $id }}" data-parent="#accordionExample">
+  <div id="{{ $collapseId }}" class="collapse" aria-labelledby="{{ $headerId }}" data-parent="#{{ $parentId }}">
     <div class="card-body">
       {{ .Inner }}
     </div>
