Fix rendering of table

--- a/layouts/shortcodes/holdeplasser.html
+++ b/layouts/shortcodes/holdeplasser.html
@@ -1,4 +1,5 @@
-<table class="table table-sm" id="collapseHoldeplasser">
+<!-- The unindented </div> tags are a hack to prevent rendering as <pre> by Hugo -->
+<table class="table table-sm">
   <thead>
     <tr>
       <th>Holdeplass</th>
@@ -10,50 +11,56 @@
     <tr>
       <td>Arendalsgata</td>
       <td>Sagene-siden, beste bussforbindelser</td>
-      <td class="d-flex flex-wrap">
-        {{ partial "rute.html" (dict "routeNo" "20" "routeType" "bybuss") }}
-        {{ partial "rute.html" (dict "routeNo" "37" "routeType" "bybuss") }}
-        {{ partial "rute.html" (dict "routeNo" "54" "routeType" "bybuss") }}
-        {{ partial "rute.html" (dict "routeNo" "20" "routeType" "nattbuss") }}
+      <td>
+        <div class="d-flex flex-wrap">
+          {{ partial "rute.html" (dict "routeNo" "20" "routeType" "bybuss") }}
+          {{ partial "rute.html" (dict "routeNo" "37" "routeType" "bybuss") }}
+          {{ partial "rute.html" (dict "routeNo" "54" "routeType" "bybuss") }}
+          {{ partial "rute.html" (dict "routeNo" "20" "routeType" "nattbuss") }}
+</div>
       </td>
-
     </tr>
     <tr>
       <td>Sandaker senter</td>
       <td>Torshov-siden, beste trikkeforbindelser</td>
-      <td class="d-flex flex-wrap">
-        {{ $routes := dict "11" "tram" "11N" "nattbuss" "12" "tram" "12N" "nattbuss" "13" "tram" }}
-        {{ partial "rute.html" (dict "routeNo" "11" "routeType" "tram") }}
-        {{ partial "rute.html" (dict "routeNo" "11N" "routeType" "nattbuss") }}
-        {{ partial "rute.html" (dict "routeNo" "12" "routeType" "tram") }}
-        {{ partial "rute.html" (dict "routeNo" "12N" "routeType" "nattbuss") }}
-        {{ partial "rute.html" (dict "routeNo" "13" "routeType" "tram") }}
+      <td>
+        <div class="d-flex flex-wrap">
+          {{ partial "rute.html" (dict "routeNo" "11" "routeType" "tram") }}
+          {{ partial "rute.html" (dict "routeNo" "11N" "routeType" "nattbuss") }}
+          {{ partial "rute.html" (dict "routeNo" "12" "routeType" "tram") }}
+          {{ partial "rute.html" (dict "routeNo" "12N" "routeType" "nattbuss") }}
+          {{ partial "rute.html" (dict "routeNo" "13" "routeType" "tram") }}
+</div>
       </td>
     </tr>
     <tr>
       <td>Torshovparken</td>
       <td>Kun hvis du må ta 30-bussen</td>
-      <td class="d-flex flex-wrap">
-        {{ partial "rute.html" (dict "routeNo" "20" "routeType" "bybuss") }}
-        {{ partial "rute.html" (dict "routeNo" "30" "routeType" "bybuss") }}
+      <td>
+        <div class="d-flex flex-wrap">
+          {{ partial "rute.html" (dict "routeNo" "20" "routeType" "bybuss") }}
+          {{ partial "rute.html" (dict "routeNo" "30" "routeType" "bybuss") }}
+</div>
       </td>
     </tr>
     <tr>
       <td>Storo</td>
       <td>Nærmeste knutepunkt</td>
-      <td class="d-flex flex-wrap">
-        {{ partial "rute.html" (dict "routeNo" "5" "routeType" "metro") }}
-        {{ partial "rute.html" (dict "routeNo" "6" "routeType" "metro") }}
-        {{ partial "rute.html" (dict "routeNo" "11" "routeType" "tram") }}
-        {{ partial "rute.html" (dict "routeNo" "11N" "routeType" "nattbuss") }}
-        {{ partial "rute.html" (dict "routeNo" "12" "routeType" "tram") }}
-        {{ partial "rute.html" (dict "routeNo" "12N" "routeType" "nattbuss") }}
-        {{ partial "rute.html" (dict "routeNo" "13" "routeType" "tram") }}
-        {{ partial "rute.html" (dict "routeNo" "23" "routeType" "bybuss") }}
-        {{ partial "rute.html" (dict "routeNo" "24" "routeType" "bybuss") }}
-        {{ partial "rute.html" (dict "routeNo" "56" "routeType" "bybuss") }}
-        {{ partial "rute.html" (dict "routeNo" "56B" "routeType" "bybuss") }}
-        {{ partial "rute.html" (dict "routeNo" "91" "routeType" "bybuss") }}
+      <td>
+        <div class="d-flex flex-wrap">
+          {{ partial "rute.html" (dict "routeNo" "5" "routeType" "metro") }}
+          {{ partial "rute.html" (dict "routeNo" "6" "routeType" "metro") }}
+          {{ partial "rute.html" (dict "routeNo" "11" "routeType" "tram") }}
+          {{ partial "rute.html" (dict "routeNo" "11N" "routeType" "nattbuss") }}
+          {{ partial "rute.html" (dict "routeNo" "12" "routeType" "tram") }}
+          {{ partial "rute.html" (dict "routeNo" "12N" "routeType" "nattbuss") }}
+          {{ partial "rute.html" (dict "routeNo" "13" "routeType" "tram") }}
+          {{ partial "rute.html" (dict "routeNo" "23" "routeType" "bybuss") }}
+          {{ partial "rute.html" (dict "routeNo" "24" "routeType" "bybuss") }}
+          {{ partial "rute.html" (dict "routeNo" "56" "routeType" "bybuss") }}
+          {{ partial "rute.html" (dict "routeNo" "56B" "routeType" "bybuss") }}
+          {{ partial "rute.html" (dict "routeNo" "91" "routeType" "bybuss") }}
+</div>
       </td>
     </tr>
   </tbody>
