--- a/layouts/shortcodes/underarbeid.html
+++ b/layouts/shortcodes/underarbeid.html
@@ -1,5 +1,5 @@
 <div class="alert alert-warning alert-dismissible fade show" role="alert"><b>Du har mye å glede deg til!</b><br>
-Velkommen til v2 av pdog.no. Akkurat denne undersiden er under under utvikling. Du kan lese mer om nettsidens bakenforliggende systemer og kode <a href="..developer" class="alert-link">her</a>.
+Velkommen til v2 av pdog.no. Akkurat denne undersiden er under under utvikling. Du kan lese mer om nettsidens bakenforliggende systemer og kode <a href="../utvikler" class="alert-link">her</a>.
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
