--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -7,7 +7,6 @@
     aria-controls="navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-<<<<<<< Updated upstream
   <div id="navbar-nav" class="collapse navbar-collapse">
     <div class="navbar-nav">
       {{ $currentPage := . }}
@@ -23,4 +22,12 @@
             <a href="{{ .URL }}" class="dropdown-item">{{ .Name }}</a>
             {{ end }}
           </div>
-          </nav>
+        </div>
+        {{ else }}
+        <a class="nav-item nav-link{{if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }} active{{end}}"
+          href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
+        {{ end }}
+      {{ end }}
+    </div>
+  </div>
+</nav>
