--- a/layouts/shortcodes/innspill.html
+++ b/layouts/shortcodes/innspill.html
@@ -1,4 +1,4 @@
 <div class="callout callout-default">
   <h4>Har du innspill eller tilbakemeldinger?</h4>
-  Jeg er alltid på jakt etter nye gode ideer og forslag. Har du forslag til hvordan jeg kan forbedre siden, er det bare å ta kontakt. <br><br><a href="../kontaktinfo"><button type="button" class="btn btn-primary btn-sm">Se fullstendig kontaktinfo</button></a>
+  Jeg er alltid på jakt etter nye gode ideer og forslag. Har du forslag til hvordan jeg kan forbedre siden, er det bare å ta kontakt. <br><br><a href="../../kontaktinfo"><button type="button" class="btn btn-primary btn-sm">Se fullstendig kontaktinfo</button></a>
 </div>
