Oppdadert last modified på alle sidene til i morgen kl 12.00 CEST. Det er endelig lansering for v2, sender også ut invitasjoner til lanseringsfesten. Gjort en del endringer knytta til filstrukturen i content. Da jeg ikke ser noe poeng i å ha undermapper (navbar bryr seg ikke), og det skaper bare flere problemer da jeg må lenke opp og ned mellom disse sidene. Det eneste som har undersider nå, er det som tidligere var Ivan Bjorndals gate 6 og nå er endret til visitt (dobbel-t er intensjonelt). Neste ting på lista er å gå gjennom hele siden for døde lenker.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,5 +9,11 @@
 <p>
   Sist oppdatert {{ .Date }}. Alt innhold er © Petter Holstad. Nettsiden er
   utviklet av Stig Johan Berggren.
+  <br>
+ <a href="/innspill" target="_blank" rel="noreferrer noopener">Innspill og bidrag</a> • 
+  <a href="/diverse/utvikler" target="_blank" rel="noreferrer noopener">Utvikler</a>
+  • 
+  <a href="/diverse/personvern" target="_blank" rel="noreferrer noopener">Personvern</a> • 
+  <a href="../../sidetre" target="_blank" rel="noreferrer noopener">Sidetre</a>
 </p>
 {{ end }}
