Sjekket for døde lenker. Oppdatert CV med trekkspill og eksterne lenker. Oppdatert lanseringsfestinvitasjonen med nytt skjema og omorganisering av tekst. Lagt til info på catchall om at man ikke bør bruke den mot epostilbyderens innlogging. La til egenrisk-disclaimer på samme side. Opprettet innhold på Orddelingsmafiaen. Finpusset på lanseringsfesten, invitasjoner går ut nå straks. Oppdatert forsiden med cards i stedet for tekst. Uniform footer på index, alle undersider og (nyhet) 404-siden.

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
-  <a class="navbar-brand" href="..">
+  <a class="navbar-brand" href="../..">
     <img src="https://pdog.no/favicon.png" width="30" height="30" class="d-inline-block align-top mr-1" alt="">
     petterholstad.no • pdog.no
   </a>
