--- a/layouts/404.html
+++ b/layouts/404.html
@@ -8,3 +8,16 @@
       </div>
     </main>
 {{ end }}
+
+{{ define "footer" }}
+<p>
+  Sist oppdatert {{ .Date }}. Alt innhold er © Petter Holstad. Nettsiden er
+  utviklet av Stig Johan Berggren.
+  <br>
+<a href="innspill" target="_blank" rel="noreferrer noopener">Innspill og bidrag</a> • 
+  <a href="utvikler" target="_blank" rel="noreferrer noopener">Utvikler</a>
+  • 
+  <a href="personvern" target="_blank" rel="noreferrer noopener">Personvern</a> • 
+  <a href="sidetre" target="_blank" rel="noreferrer noopener">Sidetre</a> • <a href="../../om" target="_blank" rel="noreferrer noopener">Om</a>
+</p>
+{{ end }}
