--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,10 +11,10 @@
   Sist oppdatert {{ .Date }}. Alt innhold er © Petter Holstad. Nettsiden er
   utviklet av Stig Johan Berggren.
   <br>
- <a href="/innspill" target="_blank" rel="noreferrer noopener">Innspill og bidrag</a> • 
-  <a href="/diverse/utvikler" target="_blank" rel="noreferrer noopener">Utvikler</a>
+<a href="innspill" target="_blank" rel="noreferrer noopener">Innspill og bidrag</a> • 
+  <a href="utvikler" target="_blank" rel="noreferrer noopener">Utvikler</a>
   • 
-  <a href="/diverse/personvern" target="_blank" rel="noreferrer noopener">Personvern</a> • 
-  <a href="../../sidetre" target="_blank" rel="noreferrer noopener">Sidetre</a>
+  <a href="personvern" target="_blank" rel="noreferrer noopener">Personvern</a> • 
+  <a href="sidetre" target="_blank" rel="noreferrer noopener">Sidetre</a> • <a href="../../om" target="_blank" rel="noreferrer noopener">Om</a>
 </p>
 {{ end }}
