begynn å fikse HTML-valideringsfeil

--- a/layouts/shortcodes/findmaps.html
+++ b/layouts/shortcodes/findmaps.html
@@ -18,4 +18,4 @@
 </table>
 </div>
 
-<a href="https://kart.finn.no/?lng=10.76466&lat=59.93754&zoom=17&mapType=normap&markers=10.76466,59.93754,r,Ivan+Bjørndals+gate+6%7C10.76466,59.93754,r,Ivan+Bjørndals+gate%7C10.76466,59.93754,r,Ivan+Bjørndals+gate+6" target_blank><button type="button" class="btn btn-secondary">Gå til kartet på finn.no</button></a>
+<a href="https://kart.finn.no/?lng=10.76466&lat=59.93754&zoom=17&mapType=normap&markers=10.76466,59.93754,r,Ivan+Bjørndals+gate+6%7C10.76466,59.93754,r,Ivan+Bjørndals+gate%7C10.76466,59.93754,r,Ivan+Bjørndals+gate+6" class="btn btn-secondary" target="_blank"Gå til kartet på finn.no</a>
