--- a/layouts/shortcodes/googlemaps.html
+++ b/layouts/shortcodes/googlemaps.html
@@ -15,4 +15,4 @@
 </table>
 </div>
 
-<a href="https://goo.gl/maps/kYidP8R5bmjuCn6r5" target_blank><button type="button" class="btn btn-secondary">Gå til kartet på maps.google.com</button></a>
+<a href="https://goo.gl/maps/kYidP8R5bmjuCn6r5" class="btn btn-secondary" target="_blank">Gå til kartet på maps.google.com</a>
